--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "智慧数据学院",
+    "name" : "智数服务舱",
     "appid" : "__UNI__D5F80DB",
     "description" : "",
     "versionName" : "1.0.0",
